force-app/main/default/objects/SFDC_MDF__c/SFDC_MDF__c.object-meta.xml
<CustomObject>
    <description>Track MDF request details including partner account, requested amount, activity type and date, and approval status.</description>
    <label>Fund Request</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>