force-app/main/default/objects/SFDC_MDF__c/fields/Account_LOB__c.field-meta.xml
<CustomField>
    <fullName>Account_LOB__c</fullName>
    <formula>TEXT( Account__r.LOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account LOB</label>
    <type>Text</type>
</CustomField>