force-app/main/default/objects/SFDC_MDF__c/fields/Account_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Type__c</fullName>
    <label>Account Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>