force-app/main/default/objects/SFDC_MDF__c/fields/Activity_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Activity_Contact_Email__c</fullName>
    <description>Email address of partner contact.</description>
    <formula>Requester_Name__r.Email</formula>
    <label>Activity Contact Email</label>
    <type>Text</type>
</CustomField>