force-app/main/default/objects/SFDC_MDF__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>The date the activity is planned. Optionally incorporate a validation rule to ensure that there is ample lead time to approve the request before the planned activity.</description>
    <inlineHelpText>This is the day of the event or the date the activity begins.</inlineHelpText>
    <label>Activity Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>