force-app/main/default/objects/SFDC_MDF__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>A list of available activity types. Customize as needed.</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-marketing Digital Campaign</fullName>
            </value>
            <value>
                <fullName>E-marketing - Video</fullName>
            </value>
            <value>
                <fullName>Event - Campaign in a box</fullName>
            </value>
            <value>
                <fullName>Event - Conference / Tradeshow only</fullName>
            </value>
            <value>
                <fullName>Event - Customer Briefing Center (CBC) Visit</fullName>
            </value>
            <value>
                <fullName>Event – Partner Seminar / Roadshow</fullName>
            </value>
            <value>
                <fullName>Event - Tradeshow in a box including event</fullName>
            </value>
            <value>
                <fullName>Event – Training</fullName>
            </value>
            <value>
                <fullName>Event – Webinar</fullName>
            </value>
            <value>
                <fullName>NCR defined Sales Program – Funded Head Count Distributor Only</fullName>
            </value>
            <value>
                <fullName>Print – Business case driven</fullName>
            </value>
            <value>
                <fullName>Sales Program - Incentive</fullName>
            </value>
            <value>
                <fullName>Sales Program - Telesales/Telemarketing</fullName>
            </value>
            <value>
                <fullName>Search Engine Marketing/Social Media/PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>