force-app/main/default/objects/SFDC_MDF__c/fields/Annual_Sales_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Quota__c</fullName>
    <label>Estimated Annual Sales Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>