force-app/main/default/objects/SFDC_MDF__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is automatically checked by the fund request approval process and in turn recalculates the budget balances</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>