force-app/main/default/objects/SFDC_MDF__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>The date the fund request was approved. This should be updated through a workflow approval process.</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>