force-app/main/default/objects/SFDC_MDF__c/fields/Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan__c</fullName>
    <label>Business Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>