force-app/main/default/objects/SFDC_MDF__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Requests</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>