force-app/main/default/objects/SFDC_MDF__c/fields/Circulation__c.field-meta.xml
<CustomField>
    <fullName>Circulation__c</fullName>
    <label>Estimated Circulation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>