force-app/main/default/objects/SFDC_MDF__c/fields/Cost_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Activity__c</fullName>
    <description>Formula: 
 if(&quot;FundRequest.Total NCR Approved&quot; &gt;0) then &quot;FundClaim.Approved Amount&quot; otherwise &quot;FundRequest.Total Approved Reimbursement Limit&quot;</description>
    <formula>IF((Total_NCR_Approved__c &gt; 0), Amount__c , Total_NCR_Estimated_Participation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>