force-app/main/default/objects/SFDC_MDF__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Activity End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>