force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Bounce_Back_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bounce_Back_Success_Rate__c</fullName>
    <formula>IF(Number_of_Contacts__c &gt; 0, (Estimated_Number_of_Responses__c /  Number_of_Contacts__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Bounce Back Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>