force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Rate__c</fullName>
    <formula>IF(Number_of_Calls__c &gt; 0, (Number_of_Sales__c /  Number_of_Calls__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>