force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_Copy__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Copy__c</fullName>
    <description>Cost per Copy ($)</description>
    <formula>IF(Number_of_Copies__c &gt; 0, (Total_Estimated_Cost__c /  Number_of_Copies__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>