force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_EXISTING_Lead__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_EXISTING_Lead__c</fullName>
    <formula>IF(Estimated_Existing_Leads__c!=0, (Total_Estimated_Cost__c/Estimated_Existing_Leads__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per EXISTING Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>