force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_INTERACTION__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_INTERACTION__c</fullName>
    <formula>IF(Estimated_Interactions__c != 0, (Total_Estimated_Cost__c/Estimated_Interactions__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per INTERACTION</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>