force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Recipient__c</fullName>
    <formula>IF(Circulation__c &gt; 0, (Total_Estimated_Cost__c /  Circulation__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per Recipient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>