force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_Sale__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Sale__c</fullName>
    <formula>IF(Number_of_Sales__c &gt; 0, (Total_Estimated_Cost__c /  Number_of_Sales__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>