force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_per_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Visitor__c</fullName>
    <formula>IF(Number_of_Unique_Site_Visitors__c &gt; 0, (Total_Estimated_Cost__c /  Number_of_Unique_Site_Visitors__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost per Visitor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>