force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Cost_to_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_to_Revenue__c</fullName>
    <formula>IF(Annual_Sales_Quota__c &gt; 0, (Total_Estimated_Cost__c /  Annual_Sales_Quota__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Cost to Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>