force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Email_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Email_Open_Rate__c</fullName>
    <formula>IF(Number_of_Emails_Sent__c &gt; 0, (Estimated_Open_Emails__c /  Number_of_Emails_Sent__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Email Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>