force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Existing_Leads__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Existing_Leads__c</fullName>
    <description>You interacted with a current customer or contact who expressed interest in making a new purchase from you.</description>
    <inlineHelpText>You interacted with a current customer or contact who expressed interest in making a new purchase from you.</inlineHelpText>
    <label>Estimated Existing Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>