force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Interactions__c</fullName>
    <label>Estimated Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>