force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_New_Leads__c.field-meta.xml
<CustomField>
    <fullName>Estimated_New_Leads__c</fullName>
    <description>You captured data (name, number, e-mail, business name) for a new contact interested in purchasing from you</description>
    <inlineHelpText>You captured data (name, number, e-mail, business name) for a new contact interested in purchasing from you</inlineHelpText>
    <label>Estimated New Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>