force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Number_of_Responses__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Responses__c</fullName>
    <label>Estimated Number of Responses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>