force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Open_Emails__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Open_Emails__c</fullName>
    <label>Estimated Open Emails</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>