force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Opportunity__c</fullName>
    <description>Defined customer opportunity with a committed budget and implementation timeline within the next 12 months that will materialize in an order for you or another partner / supplier.</description>
    <inlineHelpText>Defined customer opportunity with a committed budget and implementation timeline within the next 12 months that will materialize in an order for you or another partner / supplier.</inlineHelpText>
    <label>Estimated Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>