force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_ROI__c.field-meta.xml
<CustomField>
    <fullName>Estimated_ROI__c</fullName>
    <formula>IF((Total_Estimated_Cost__c &gt; 0 &amp;&amp; ((Estimated_Revenue__c  * 0.25)&gt;=Total_Estimated_Cost__c)), (((Estimated_Revenue__c  * 0.25) -  Total_Estimated_Cost__c) / Total_Estimated_Cost__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>