force-app/main/default/objects/SFDC_MDF__c/fields/Estimated_Sales_Incentive_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Sales_Incentive_Rate__c</fullName>
    <formula>IF(Estimated_Revenue__c &gt; 0, (Total_Estimated_Cost__c /  Estimated_Revenue__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Sales Incentive Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>