force-app/main/default/objects/SFDC_MDF__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <description>Finance type of the actvity.</description>
    <label>Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Expense</fullName>
            </value>
            <value>
                <fullName>Contra Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>