force-app/main/default/objects/SFDC_MDF__c/fields/Is_Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Check box contains information either record is locked or not.
Note: Developer need to store information in this ckeckbox.</description>
    <label>Is Record Locked ?</label>
    <type>Checkbox</type>
</CustomField>