force-app/main/default/objects/SFDC_MDF__c/fields/IsCurrentUserCAMorRCL__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUserCAMorRCL__c</fullName>
    <description>Is Current User, CAM or RCL for list view</description>
    <formula>IF(!ISBLANK(CAM__c), IF((CAM__c== $User.Id || RCL__c== $User.Id), True, False), False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User, CAM or RCL</label>
    <type>Checkbox</type>
</CustomField>