force-app/main/default/objects/SFDC_MDF__c/fields/LOB_from_Account__c.field-meta.xml
<CustomField>
    <fullName>LOB_from_Account__c</fullName>
    <label>LOB from Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>