force-app/main/default/objects/SFDC_MDF__c/fields/Nbr_of_Anticipated_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Anticipated_Attendees__c</fullName>
    <label>Nbr of Anticipated Attendees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>