force-app/main/default/objects/SFDC_MDF__c/fields/Nbr_of_Original_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Original_Contacts__c</fullName>
    <label>Nbr of Original Contacts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>