force-app/main/default/objects/SFDC_MDF__c/fields/No_of_Submitted_Claims__c.field-meta.xml
<CustomField>
    <fullName>No_of_Submitted_Claims__c</fullName>
    <label>No. of Submitted Claims</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>