force-app/main/default/objects/SFDC_MDF__c/fields/Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads__c</fullName>
    <label>Estimated Number of Leads</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>