force-app/main/default/objects/SFDC_MDF__c/fields/Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Opportunities__c</fullName>
    <label>Number of Open Opportunities</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>