force-app/main/default/objects/SFDC_MDF__c/fields/Number_of_Unique_Views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unique_Views__c</fullName>
    <label>Estimated Number of Unique Views</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>