force-app/main/default/objects/SFDC_MDF__c/fields/Other_Vendors_Represented__c.field-meta.xml
<CustomField>
    <fullName>Other_Vendors_Represented__c</fullName>
    <description>Other Vendors Represented in the Activity.</description>
    <inlineHelpText>Other Vendors Represented in the Activity.</inlineHelpText>
    <label>Other Vendors Represented</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>Zebra Technologies</fullName>
            </value>
            <value>
                <fullName>Micros</fullName>
            </value>
            <value>
                <fullName>Datalogic</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>Cognitive TPG</fullName>
            </value>
            <value>
                <fullName>Elo Touch Solutions</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>HP ( Hewlett Packard)</fullName>
            </value>
            <value>
                <fullName>SII (Seiko Instruments)</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Payleven</fullName>
            </value>
            <value>
                <fullName>Motorola solutions</fullName>
            </value>
            <value>
                <fullName>Intermec (by Honeywell)</fullName>
            </value>
            <value>
                <fullName>APG Cash Drawer</fullName>
            </value>
            <value>
                <fullName>Applied Data Corp</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Epicor Retail Solutions</fullName>
            </value>
            <value>
                <fullName>JDA Software</fullName>
            </value>
            <value>
                <fullName>LOC Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>