force-app/main/default/objects/SFDC_MDF__c/fields/RCL__c.field-meta.xml
<CustomField>
    <fullName>RCL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Regional Channel Leader</inlineHelpText>
    <label>RCL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Requests1</relationshipName>
    <trackHistory>false</trueHistory>
    <type>Lookup</type>
</CustomField>