force-app/main/default/objects/SFDC_MDF__c/fields/Regional_Channel_Leader_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Regional_Channel_Leader_Approval_Date__c</fullName>
    <label>RCL Decision Date</label>
    <type>DateTime</type>
</CustomField>