force-app/main/default/objects/SFDC_MDF__c/fields/Released_Amount__c.field-meta.xml
<CustomField>
    <fullName>Released_Amount__c</fullName>
    <label>Released Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>