force-app/main/default/objects/SFDC_MDF__c/fields/Released_Funds__c.field-meta.xml
<CustomField>
    <fullName>Released_Funds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is the replica of  &quot;Released Funds&quot; of claim. This field value come from &quot;Released Funds&quot; field of Claim.</description>
    <label>Released Funds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>